// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Repository rendering works for condensed unfurls 1`] = `
Object {
  "color": "#24292f",
  "fallback": "bkeepers/dotenv",
  "fields": Array [
    Object {
      "short": true,
      "title": "Watchers",
      "value": 57,
    },
    Object {
      "short": true,
      "title": "Stars",
      "value": 4230,
    },
  ],
  "footer": "<https://github.com/bkeepers/dotenv|bkeepers/dotenv>",
  "footer_icon": "https://assets-cdn.github.com/favicon.ico",
  "mrkdwn_in": Array [
    "text",
    "fields",
  ],
  "title": "bkeepers/dotenv",
  "ts": 1343101131,
}
`;

exports[`Repository rendering works for full unfurls 1`] = `
Object {
  "color": "#24292f",
  "fallback": "bkeepers/dotenv",
  "fields": Array [
    Object {
      "short": true,
      "title": "Watchers",
      "value": 57,
    },
    Object {
      "short": true,
      "title": "Stars",
      "value": 4230,
    },
    Object {
      "short": true,
      "title": "Forks",
      "value": 283,
    },
    Object {
      "short": true,
      "title": "Last updated",
      "value": "5 months ago",
    },
  ],
  "footer": "<https://github.com/bkeepers/dotenv|bkeepers/dotenv>",
  "footer_icon": "https://assets-cdn.github.com/favicon.ico",
  "mrkdwn_in": Array [
    "text",
    "fields",
  ],
  "text": "A Ruby gem to load environment variables from \`.env\`. ",
  "title": "bkeepers/dotenv",
  "ts": 1343101131,
}
`;
